syntax = "proto3";

package booking;

message CreateBookingRequest {
  string room = 1;
  string roomid = 2;
  string userid = 3;
  string fromdate = 4;
  string todate = 5;
  int32 totalamount = 6;
  int32 totaldays = 7;
  string transactionid = 8;
  string status = 9;
}
